@@ -3,6 +3,11 @@ Revision history for Perl extension Coro.
 	- additionally save PM_curpm might fix as-of-yet
           unseen problems with regex matches being attributes to the
           wrong package.
+        - add t/10_bugs.t, which currently checks against imho broken
+          perls that use 0.26MB of stack space per Perl_magic_get
+          invocation (debian) as opposed ot the 0.0002MB normal
+          perls use.
+        - make stacksize configurable for ultimate debian experience.
 
 1.51 Mon Dec 12 18:48:36 CET 2005
 	- remove debugging warn() accidentally left in Coro::Select.
